compiler/typ/tests/fixtures/diagnostics/0142_adt_tuple_constructor_mismatch_02.ml.infer.expected
File "0142_adt_tuple_constructor_mismatch_02.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0142_adt_tuple_constructor_mismatch_02 is not a valid module name.

File "0142_adt_tuple_constructor_mismatch_02.ml", line 2, characters 30-34:
2 | let _ : rec_beta = Pair_beta (true, 1)
                                  ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
